<resources>
    <string name="app_name">Crazy Master</string>
    <string name="timing">Timing</string>
    <string name="statistics">Statistics</string>
    <string name="min">mins</string>
    <string name="mins">mins</string>
    <string name="celled">Timing Celled</string>
    <string name="diffusion">Diffusion</string>
    <string name="duration">Duration</string>
    <string name="value">value</string>
    <string name="suffix_min">:00</string>
    <string name="delete">delete</string>
    <string name="press_toast">Press again to exit</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="cancel_timer">Whether to cancel?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="total_study_time">Total study time</string>
    <string name="victory">Victory</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_update">No updates.</string>
    <string name="about">An application about time scheduler.</string>
    <string name="heroic_bronze">Heroic bronze III</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_def">Musk</string>
    <string name="motto">Motto</string>
    <string name="motto_def">If you think you can, you can.</string>
</resources>
